# dahack-ai

./: .pre-commit-config.yaml  COMPLETION_CHECKLIST.md  LICENSE  README.md  dahack-ai.code-workspace  docker-compose.override.yml  docker-compose.yml  test_docker_migration.sh
.cursor/rules/: global.mdc  personality.mdc  project.mdc  python.mdc  security.mdc  system.mdc  typescript.mdc
api/: .dockerignore  Dockerfile  README.md  aerich.ini  openapi.yaml  pyproject.toml  run_migrations.py  test_auth.py
api/app/: generate_openapi.py  main.py
api/app/core/: config.py  db.py  models.py  redis.py  s3.py
api/app/domains/auth/: README.md  __init__.py  api.py  contact_service.py  contacts_api.py  dependencies.py  message_schemas.py  message_service.py  messages_api.py  models.py  room_schemas.py  room_service.py  rooms_api.py  schemas.py  service.py  websocket_manager.py
api/app/domains/health/: api.py
api/app/domains/todos/: api.py  models.py  schemas.py
api/migrations/: 20240101_01_create_users_table.sql  20240103_01_refactor_contacts_invitations.sql  20240104_01_create_rooms_tables.sql  20240105_01_create_messages_table.sql  README.md
api/tests/: conftest.py  test_all.py  test_auth.py  test_contacts.py
api/tests/integration/: test_todos.py
docs/: CONCERNS.md  DX_ISSUES.md  OUTCOME.md  REQUIREMENTS.md
docs/api/: CONTACT_FLOW_DIAGRAM.md  MESSAGING_SUMMARY.md
e2e/: .gitignore  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
e2e/features/: advanced-features.feature  contact-management.feature  group-chat.feature  image-sharing.feature  one-on-one-chat.feature  security-requirements.feature  ui-ux-requirements.feature  user-registration.feature
e2e/tests/: contact-management.spec.ts  home.spec.ts  room-management.spec.ts  user-login.spec.ts  user-registration.spec.ts
e2e/tests/helpers/: auth.ts  contact.ts  room.ts
ui/: Dockerfile  README.md  biome.json  eslint.config.mjs  package.json  pnpm-lock.yaml
ui/app/: layout.tsx  page.tsx  providers.tsx
ui/app/api/auth/register/: route.ts
ui/app/chat/: page.tsx
ui/app/chat/components/: ChatSidebar.tsx  ContactList.tsx  MessageInput.tsx  MessageList.tsx
ui/app/login/: page.tsx
ui/app/register/: page.tsx
ui/app/todos/: page.tsx
ui/lib/: api.ts  chat-utils.ts  websocket.ts
